--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,19 @@
 
 {% block content %}
     
-    {% for post in posts %}
-        <h2>{{post['title']}}</h2>
-        <p> By <strong> {{post['author']}} written on {{post['date_posted']}}</strong> </p>
-        <p>{{post['content']}}</p>
+
+    {% for post in posts  %}
+    <article class="media content-section">
+        <div class="media-body">
+            <div class="article-metadata">
+                <a class="mr-2" href="#">{{ post.author }}</a>
+                <small class="text-muted">{{ post.date_posted }}</small>
+            </div>
+            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content }}</p>        
+        </div>
+    </article>
     {% endfor %}
+
         
 {% endblock %}
