--- a/templates/home.html
+++ b/templates/home.html
@@ -4,16 +4,16 @@
     
 
     {% for post in posts  %}
-    <article class="media content-section">
-        <div class="media-body">
-            <div class="article-metadata">
-                <a class="mr-2" href="#">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date_posted }}</small>
+        <article class="media content-section bg-gray-100">
+            <div class="media-body">
+                <div class="article-metadata">
+                    <a class="mr-2 text-center" href="#">{{ post.author }}</a>
+                    <small class="text-muted">{{ post.date_posted }}</small>
+                </div>
+                <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                <p class="article-content">{{ post.content }}</p>        
             </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>        
-        </div>
-    </article>
+        </article>
     {% endfor %}
 
         
