--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 <body>
     {% include 'navigation.html'   %}
 
-    <main role="main" class="container">
+    <main role="main" class="container bg-gray-400">
         <div class="row">
             <div class="col-md-8">
 
