basic update form

--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -7,7 +7,7 @@
 
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Log in</legend>
                 
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
