--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,5 +1,53 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{{ current_user.username }}</h1>
+    <div class="content-section">
+        <div class="media" style="display: flex;">
+        <img class="rounded-circle account-img" src="{{ image_file }}">
+        <div class="media-body">
+            <h2 class="account-heading">{{ current_user.username }}</h2>
+            <p class="text-secondary">{{ current_user.email}}</p>
+        </div>
+        </div>
+        <!-- FORM HERE -->
+        <form action="" method="POST" autocomplete="off">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Update Info</legend>
+                <div class="form-group">
+                    {{ form.username.label(class="form-control-label") }}
+
+                    {% if form.username.errors %}
+                        {{ form.username(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feeback">
+                            {% for error in form.username.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}    
+                        </div>
+                    {% else %}
+                        {{ form.username(class="form-control form-control-lg") }}   
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feeback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}    
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}   
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group text-center">
+                {{ form.submit(class="btn btn-outline-info mt-3")}}
+            </div>
+        </form>
+    </div>
+  
 {% endblock %}
+
