--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -1,5 +1,48 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>About</h1>
+<div class="content-section">
+        
+    <form action="" method="POST" autocomplete="off">
+
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">New Post</legend>
+            
+            <div class="form-group">
+                {{ form.title.label(class="form-control-label") }}
+                
+                {% if form.title.errors %}
+                    {{ form.title(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feeback">
+                        {% for error in form.title.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}    
+                    </div>
+                {% else %}
+                    {{ form.title(class="form-control form-control-lg") }}   
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.content.label(class="form-control-label") }}
+                
+                {% if form.content.errors %}
+                    {{ form.content(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feeback">
+                        {% for error in form.content.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}    
+                    </div>
+                {% else %}
+                    {{ form.content(class="form-control form-control-lg") }}   
+                {% endif %}
+            </div>
+            
+        </fieldset>
+        <div class="form-group text-center">
+            {{ form.submit(class="btn btn-outline-info mt-3")}}
+        </div>
+    </form>
+</div>
+
 {% endblock %}
