--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -4,13 +4,17 @@
     
 
     {% for post in posts  %}
+    
         <article class="media content-section bg-gray-100">
+            <img class="rounded-circle article-img" 
+                src="{{ url_for('static', filename='/profile_pics/' + post.author.image_file) }}" 
+                alt="profile pic">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2 text-center" href="#">{{ post.author }}</a>
-                    <small class="text-muted">{{ post.date_posted }}</small>
+                    <a class="mr-2 text-decoration-none text-primary" href="#">{{ post.author.username }}</a>
+                    <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 </div>
-                <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                <h2><a class="article-title text-decoration-none" href="#">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content }}</p>        
             </div>
         </article>
