--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -7,7 +7,7 @@
 
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">New Post</legend>
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
             
             <div class="form-group">
                 {{ form.title.label(class="form-control-label") }}
