--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% for post in posts %}
+    {% for post in posts.items %}
         <article class="media content-section bg-gray-100">
             <div class="media-body">
                 <div class="row align-items-center">
@@ -26,4 +26,20 @@
             </div>
         </article>
     {% endfor %}
+
+    <!-- pages -->
+    {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+        {% if page_num %}
+            {% if posts.page == page_num %}
+                <a class="btn btn-info mt-2" href="{{ url_for('home', page=page_num ) }}">{{ page_num }}</a>
+            {% else %}
+                <a class="btn btn-outline-info mt-3" href="{{ url_for('home', page=page_num ) }}">{{ page_num }}</a>
+            {% endif %}
+        {% else %}
+            ...
+        {% endif %}
+    {% endfor %}
+
+
+
 {% endblock %}
