--- a/flaskblog/templates/user_posts.html
+++ b/flaskblog/templates/user_posts.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <h1>Posts by {{ user.username }}  ({{ posts.total }}) </h1>
     {% for post in posts.items %}
         <article class="media content-section bg-gray-100">
             <div class="media-body">
@@ -32,9 +33,9 @@
         {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
             {% if page_num %}
                 {% if posts.page == page_num %}
-                    <a class="btn btn-info mt-2" href="{{ url_for('home', page=page_num ) }}">{{ page_num }}</a>
+                    <a class="btn btn-info mt-2" href="{{ url_for('user_posts', username=user.username, page=page_num ) }}">{{ page_num }}</a>
                 {% else %}
-                    <a class="btn btn-outline-info mt-3" href="{{ url_for('home', page=page_num ) }}">{{ page_num }}</a>
+                    <a class="btn btn-outline-info mt-3" href="{{ url_for('user_posts', username=user.username, page=page_num ) }}">{{ page_num }}</a>
                 {% endif %}
             {% else %}
                 ...
